--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8080
+server.port=80
 server.servlet.context-path=/
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
@@ -10,5 +10,5 @@ spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.database-platform=H2
-spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
